src/tests/fixtures/default_values/NonLiteralDefaultValue.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
export default class Query {
  /** @GQLField */
  hello({ greeting = String(Math.random()) }: { greeting: string }): string {
    return `${greeting} world!`;
  }
}

-----------------
OUTPUT
-----------------
Error: Expected GraphQL field argument default values to be a literal.

If you think <library name> should be able to infer this type, please report an issue at <issue URL>.:
 --> src/tests/fixtures/default_values/NonLiteralDefaultValue.invalid.ts:4:22

  |   /** @GQLField */
4 |   hello({ greeting = String(Math.random()) }: { greeting: string }): string {
  |                      ^^^^^^^^^^^^^^^^^^^^^ 
  |     return `${greeting} world!`;
