src/tests/fixtures/default_values/NonLiteralDefaultValue.invalid.ts
/** @GQLType */
export default class Query {
  /** @GQLField */
  hello({ greeting = String(Math.random()) }: { greeting: string }): string {
    return `${greeting} world!`;
  }
}
